--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   },
   "dependencies": {
     "@ethersproject/wallet": "^5.7.0",
+    "@killthebuddha/fig": "0.0.1",
     "@vercel/analytics": "^1.3.1",
     "@xmtp/xmtp-js": "^11.6.3",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18",
-    "@killthebuddha/fig": "0.0.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
